...
          onDismissRequest = {
            onPermissionDenied()
            openAlertDialog.value = false
          },
          confirmButton = {
            TextButton(
                modifier = Modifier.testTag("AllowCameraPermissionButton"),
                onClick = {
                  cameraPermissionLauncher.launch(
                      arrayOf(
                          Manifest.permission.CAMERA,
                      ))
                  openAlertDialog.value = false
                }) {
                  Text("Allow")
                }
          },
          dismissButton = {
            TextButton(
                modifier = Modifier.testTag("NoAllowCameraPermissionButton"),
                onClick = {
                  onPermissionDenied()
                  openAlertDialog.value = false
                }) {
                  Text("Don't Allow")
                }
...
