...
) {
  var shouldShowCamera by remember { mutableStateOf(checkForCameraPermission(context)) }
  var photoUri by remember { mutableStateOf<Uri?>(null) }

  when (shouldShowCamera) {
    true -> {
      CameraView(
          outputDirectory = outputDirectory,
          executor = executor,
          onImageCaptured = {
            photoUri = it
            shouldShowCamera = false
            onCaptureClosedSuccess()
...

        IconButton(
            modifier =
                Modifier.padding(bottom = 20.dp)
                    .align(Alignment.BottomCenter)
                    .size(60.dp)
                    .testTag("TakePictureButton"),
            onClick = {
              takePhoto(
                  context = context,
                  imageCapture = imageCapture,
                  outputDirectory = outputDirectory,
                  executor = executor,
...
